<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ping Pong</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bPong1Player">Pong 1 player</string>
    <string name="bPong2Player">Pong 2 Players</string>
    <string name="bJuggle">Juggle</string>
    <string name="title_activity_pong_single_player">PongSinglePlayer</string>
    <string name="title_activity_pong_two_player">PongTwoPlayer</string>
    <string name="title_activity_juggle">Juggle</string>
    <string name="dialog_pong2player_open_settings">Open settings?</string>
    <string name="title_activity_pong_two_player_settings">PongTwoPlayerSettings</string>
    <string name="paddle_size">Paddle size:</string>
    <string name="ball_speed">Ball speed:</string>
    <string name="ball_size">Ball size</string>
    <string name="dialog_pong2player_win">Congratulations player </string>
    <string name="won"> won</string>
    <string name="restart">Restart</string>
    <string name="menu">Menu</string>
    <string name="dialog_pong1player_player_win">Congratulation you won</string>
    <string name="dialog_pong1player_ai_win">You lose</string>
    <string name="title_activity_wall">Wall</string>
    <string name="bWall">Wall</string>
    <string name="dialog_wall_game_over">Game over, your score was </string>
    <string name="dialog_wall_your_highscore">Your highscore is</string>
    <string name="dialog_wall_new_highscore">NEW HIGHSCORE!</string>

</resources>
